--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -323,11 +323,11 @@ tr.a11yc_flash {
 	border-bottom: none;
 	width: 100%;
 }
-.a11yc table tr.even,
-.a11yc thead+tbody tr.odd {
+.a11yc table tr:nth-child(even),
+.a11yc thead+tbody tr:nth-child(odd) {
 	background-color: #f3f3f3;
 }
-.a11yc thead+tbody tr.even {
+.a11yc thead+tbody tr:nth-child(even) {
 	background-color: transparent;
 }
 .a11yc_table th,
@@ -1357,7 +1357,7 @@ span.a11yc_icon_expand:before {
 	margin-top: 0;
 	margin-bottom: .75em;
 }
-#a11yc_additional_criterions_list li.odd {
+#a11yc_additional_criterions_list li:nth-child(odd) {
 	clear: left;
 }
 .a11yc_policy_sample {
