--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -458,20 +458,17 @@ table.a11yc_table_info {
 }
 /* fixed a11yc menu */
 #a11yc_header {
-	position: relative;
+	position: fixed;
 	width: 100%;
 	word-break: break-all;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-}
-.a11yc_fixed_header #a11yc_header {
+
 	background-color: #fff;
-	position: fixed;
 	left: 0;
 	right: 0;
 	top: 0;
-	margin-bottom: 20px;
 	padding: 26px 8px 0;
 	z-index: 90;
 }
@@ -479,8 +476,7 @@ table.a11yc_table_info {
 	max-width: 960px;
 	margin: auto;
 }
-.a11yc_fixed_header > h1,
-.a11yc_fixed_header .a11yc_hide_if_fixedheader {
+#a11yc_header > h1 {
 	clip: rect(1px,1px,1px,1px) !important;
 	position: absolute !important;
 	left: 0 !important;
