--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -780,7 +780,7 @@ dl#a11yc_validation_code {
 	display: block;
 	position: absolute;
 	left: 0;
-	rignt: 0;
+	right: 0;
 	bottom: 0;
 	width: calc(100% + 25px);
 	height: 0;
