--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -463,6 +463,7 @@ table.a11yc_table_info {
 	top: 0;
 	padding: 26px 8px 0;
 	z-index: 90;
+	background-color: #fff;
 }
 #a11yc_header_inner {
 	max-width: 960px;
