--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -80,16 +80,20 @@
 #a11yc_validator_results .a11yc_controller p {
 	margin: 0;
 }
-details details
+.a11yc details 
+{
+	padding-left: 1px;
+}
+.a11yc details details
 {
 	padding-left: 10px;
 }
-details summary .a11yc_heading
+.a11yc details summary .a11yc_heading
 {
 	display: inline-block;
 	width: calc( 100% - 20px );
 }
-details ul
+.a11yc details ul
 {
 	padding-left: 25px;
 }
