--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -80,7 +80,7 @@
 #a11yc_validator_results .a11yc_controller p {
 	margin: 0;
 }
-.a11yc details 
+.a11yc details
 {
 	padding-left: 1px;
 }
@@ -600,7 +600,7 @@ table.a11yc_table_info {
 	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
-.a11yc_narrow_level a[data-narrow-level] 
+.a11yc_narrow_level a[data-narrow-level]
 {
 	padding: 2px 5px 1px;
 }
@@ -928,6 +928,15 @@ h2.a11yc_header_principle:after {
 {
 	overflow-x: auto;
 }
+.a11yc_result.a11yc_result_code
+{
+	white-space: nowrap;
+	width: 6em;
+}
+.a11yc_result.a11yc_result_string
+{
+	text-align: left;
+}
 .a11yc_result .a11yc_table_check {
 	margin-bottom:0;
 	background-color: #f3f3f3;
@@ -999,7 +1008,7 @@ ul.a11yc_outlink li {
 .a11yc_outlink_u a:after {
 	content: "\f19d";
 }
-.a11yc_section_criterion .a11yc_issues 
+.a11yc_section_criterion .a11yc_issues
 {
 	margin-top: 1.5em;
 }
