--- a/assets/css/a11yc_issue.css
+++ b/assets/css/a11yc_issue.css
@@ -57,7 +57,7 @@ pre
 	page-break-after: always;
 	position: relative;
 }
-.each_page:last-of-type
+body > :last-child
 {
 	page-break-after: auto;
 }
