--- a/public/assets/css/a11yc_issue.css
+++ b/public/assets/css/a11yc_issue.css
@@ -51,9 +51,13 @@ pre
 .cover_page,
 .each_issue
 {
-	padding: 10mm 0;
 /*	page-break-after: always;*/
 	page-break-inside: avoid;
+}
+.cover_page,
+.each_issue
+{
+	padding: 10mm 0;
 	position: relative;
 }
 body > :last-child
@@ -158,7 +162,7 @@ body > :last-child
 	}
 	.screenshot img
 	{
-		max-height: 50vh;
+		max-height: 33vh;
 	}
 	.each_issue  > .heading:first-child
 	{
