--- a/public/assets/css/a11yc_issue.css
+++ b/public/assets/css/a11yc_issue.css
@@ -87,13 +87,7 @@ body > :last-child
 	font-size: 2rem;
 	line-height: 1.5;
 	display: block;
-	position: absolute;
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
 	margin: auto;
-	height: 4em;
 	padding: 1em;
 }
 .cover_page.has_image .heading
@@ -141,6 +135,10 @@ body > :last-child
 }
 
 @media print {
+	.noprint
+	{
+		display: none !important;
+	}
 	html
 	{
 		font-size: .9em;
@@ -151,7 +149,19 @@ body > :last-child
 	}
 	.cover_page
 	{
+		page-break-before: always;
+
+		display: table;
+		width: 100%;
 		height: 290mm;
+	}
+	.cover_page > .heading
+	{
+		height: auto;
+		position: relative;
+		top: -5vh;
+		display: table-cell;
+		vertical-align: middle;
 	}
 	.cover_page:not(.common):before
 	{
@@ -178,6 +188,11 @@ body > :last-child
 	.each_issue  > .heading:first-child
 	{
 		margin-top: 0;
+	}
+	a:link,
+	a:visited
+	{
+		color: #134A9C  !important;
 	}
 }
 
